@@ -1,0 +1,15 @@
+<div id="pgxndoc">
+  <div id="pgxntoc">
+    <h3>Contents</h3>
+    <ul class="pgxntocroot"><li>
+        <ul>
+          <li><a href="#L.Japanese"> Japanese</a></li>
+          <li><a href="#L.Japanese1"> Japanese</a></li></ul></li>
+    </ul>
+  </div>
+  <div id="pgxnbod">
+<div><h2 id="L.Japanese1"><a href="http://pgbulkload.projects.postgresql.org/index_ja.html"> Japanese</a></h2></div>
+<p>Copyright (c) 2007-2015, NIPPON TELEGRAPH AND TELEPHONE CORPORATION</p>
+
+</div>
+</div>
