@@ -6,6 +6,8 @@ Revision history for Perl extension PGXN::API
       - Fixed a bug that tried to read an extension JSON file case-sentiively.
       - Fixed test failures due to a change in the generation of JSONP
         responses in Plack 1.0031.
+      - Fixed a bug where the "pgxnbod" ID of a cleaned HTML element could be
+        removed if the last element in the body was rmoved.
 
 0.16.3  2013-06-19T06:31:51Z
       - Updated URI::Template to v0.16 for its support for `{+var}` and
